<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Fix My City</string>
    <string name="qual_o_problema_encontrado">Qual o problema encontrado?</string>
    <string name="escreva_aqui">Escreva aqui</string>
    <string name="desc">Descrição</string>
    <string name="selecionar_foto">Selecionar foto</string>
    <string name="tirar_foto">Tirar foto</string>
    <string name="adicionar">Adicionar</string>
    <string name="title_activity_cadastra_localizacao">CadastraLocalizacao</string>
    <string name="endere_o">Endereço</string>
    <string name="confirmar_endere_o">Confirmar endereço</string>
    <string name="usar_localiza_o_atual">Usar minha localização</string>
    <string name="categorias">Categorias</string>
   <string name="c_mera">Câmera</string>
   <string name="galeria_de_fotos">Galeria de Fotos</string>

    <string name="nome_dificuldade">Nome:</string>
    <string name="title_activity_detalhes">Detalhes</string>
    <string name="categoria">Categoria</string>
    <string name="data">Data</string>
    <string name="distancia">Distancia</string>
    <string name="title_activity_edita__dificuldades">Editar</string>
    <string name="adr_nao_encontrado">Endereço não encontrado!</string>
    <string name="status">Status</string>
    <string name="title_activity_minha_lista">MinhaLista</string>
    <string name="editar">Editar</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="seu_endere_o_aparecer_aqui">Seu endereço aparecerá aqui</string>
    <string name="ver_no_mapa">Ver no mapa</string>
</resources>