<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Cenario_Cadastro.Cadastra_Localizacao"
        android:orientation="vertical"
>

   <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_margin="16dp"
           android:textAlignment="center"
           android:id="@+id/Endereco"
           android:text="@string/seu_endere_o_aparecer_aqui"
           android:textSize="20sp"
           android:textAppearance="?android:attr/textAppearanceLarge"
           android:layout_centerVertical="true"

   />
   <Button
           android:layout_width="180dp"
           android:layout_height="wrap_content"
           android:layout_marginTop="16dp"
           android:layout_below="@+id/Endereco"
           android:layout_centerHorizontal="true"
           android:id="@+id/ConfirmaEnd"
           android:text="@string/confirmar_endere_o"
           android:textColor="#fff"
           android:background="@drawable/btn_shape_round"


   />
   <Button
           android:id="@+id/LocAtual"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/usar_localiza_o_atual"
           android:drawableLeft="@drawable/ic_location_on"
           android:layout_marginBottom="15dp"
           android:layout_centerHorizontal="true"
           android:layout_alignParentBottom="true"
           android:textColor="@color/vermelho"
           android:background="@drawable/noborder_button"

   />

</RelativeLayout>