<?xml version="1.0" encoding="utf-8"?>
<ScrollView
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
xmlns:app="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".Cenario_Detalhes.Detalhes"
android:orientation="vertical">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:id="@+id/imageView"
            android:background="#f2f2f2"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:paddingTop="16dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="12sp"
    />
    <TextView
        android:id="@+id/categoriaTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/categoria"
        android:layout_marginHorizontal="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
    />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="12sp"
    />
    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/status"
        android:layout_marginHorizontal="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
    />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:layout_marginTop="16dp"
        android:layout_marginHorizontal="16dp"
        android:textSize="12sp"
    />
    <TextView
        android:id="@+id/desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:layout_marginHorizontal="16dp"
        android:textSize="20sp"
        android:textColor="@color/black"
    />

    <Button
            android:id="@+id/verMaps"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_gravity="center"
            android:text="@string/ver_no_mapa"
            android:textColor="#fff"
            android:background="@drawable/btn_shape_round"
    />
    </LinearLayout>

</ScrollView>